<resources>
    <string name="app_name">Train Your Brain</string>
    <string name="startButton">Button</string>
    <string name="button">Start!</string>
    <string name="_30s">30s</string>
    <string name="_0_0">0/0</string>
    <string name="_10_21">10 + 21</string>
    <string name="button1">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
    <string name="display">Correct!</string>
    <string name="play">Wrong!</string>
    <string name="finish">The End!</string>
    <string name="sec_finish">Time is up!</string>
    <string name="point">%1$d/%2$d</string>
    <string name="welcome_messages">%1$d + %2$d</string>
    <string name="answering"> </string>
    <string name="your_score">Your score: %1$d</string>
    <string name="again">Button</string>
    <string name="play_again">Play Again</string>
    <string name="best_score">Your best score is %1$d</string>
    <string name="hint">Enter</string>
    <string name="enter_time_in_seconds">Enter time in seconds:</string>
    <string name="hard_level">Hard</string>
    <string name="level">Level</string>
    <string name="easy_level">Easy</string>
    <string name="middle_level">Middle</string>
    <string name="edit_theme">Set theme</string>
    <string name="log_out"><u>Log out</u></string>
    <string name="log_in"><u>Log in</u></string>
    <string name="create_account">Create your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

</resources>
