<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_in_back"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".authentication.EmailPasswordAuthentication">

    <TextView
        android:id="@+id/welcome_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_id"
        android:padding="8dp"
        android:text="@string/enter_email"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_textView"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEt"
        android:padding="8dp"
        android:text="@string/enter_password"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textView"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/cardview_light_background"
        android:hint="@string/password"/>

    <TextView
        android:id="@+id/password_confirm_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEt"
        android:padding="8dp"
        android:text="@string/confirm_password"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirmPasswordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_confirm_textView"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/cardview_light_background"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:text="@string/log_in"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPasswordEt"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/black" />

</RelativeLayout>