<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="341dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="339dp"
        android:background="#3E4AAC"
        android:onClick="startGame"
        android:padding="20dp"
        android:text="@string/button"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/settingsBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/consLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">


        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="203dp"
            android:layout_marginBottom="254dp"
            android:background="@android:color/white"
            android:onClick="answer3"
            android:padding="10dp"
            android:tag="@string/button5"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="203dp"
            android:layout_marginBottom="303dp"
            android:background="@android:color/white"
            android:onClick="answer1"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="106dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:onClick="playAgain"
            android:padding="10dp"
            android:text="@string/play_again"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="352dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_10_21"
            android:textColor="@android:color/background_light"
            android:textSize="80sp"
            android:textStyle="italic|bold"
            app:fontFamily="sans-serif-black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginLeft="141dp"
            android:layout_marginEnd="141dp"
            android:layout_marginRight="141dp"
            android:layout_marginBottom="498dp"
            android:padding="10dp"
            android:text="@string/_30s"
            android:textColor="@android:color/background_dark"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="125dp"
            android:padding="10dp"
            android:text="@string/_0_0"
            android:textColor="@android:color/background_light"
            android:textSize="80sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginStart="208dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="254dp"
            android:background="@android:color/white"
            android:onClick="answer4"
            android:padding="10dp"
            android:tag="@string/button6"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="49dp"
            android:layout_marginStart="208dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="303dp"
            android:background="@android:color/white"
            android:onClick="answer2"
            android:padding="10dp"
            android:tag="@string/button4"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="195dp"
            android:layout_marginEnd="196dp"
            android:layout_marginBottom="72dp"
            android:padding="10dp"
            android:text="@string/answering"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>